fixed image errors

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel = "stylesheet" href="style.css">
 </head>
 <body>
-    <img class="image" data-index="0" data-status="inactive" src="../images/2f1aadffae11058e8eae5ba5a29c934f.jpg">
-    <img class="image" data-index="1" data-status="inactive" src="../images/3e7c811ab98b0cba003ca62ddce784f9.jpg">
-    <img class="image" data-index="2" data-status="inactive" src="../images/e3a7de311e76eee3210aa99bceeb1357.jpg">
-    <img class="image" data-index="3" data-status="inactive" src="../images/e53e7d883aea3c3e696104cc30be6541.jpg">
-    <img class="image" data-index="4" data-status="inactive" src="../images/fe758e587bfc506e1ebec049c540712d.jpg">
-    <img class="image" data-index="5" data-status="inactive" src="../images/2f1aadffae11058e8eae5ba5a29c934f.jpg">
-    <img class="image" data-index="6" data-status="inactive" src="../images/3e7c811ab98b0cba003ca62ddce784f9.jpg">
-    <img class="image" data-index="7" data-status="inactive" src="../images/e3a7de311e76eee3210aa99bceeb1357.jpg">
-    <img class="image" data-index="8" data-status="inactive" src="../images/e53e7d883aea3c3e696104cc30be6541.jpg">
-    <img class="image" data-index="9" data-status="inactive" src="../images/fe758e587bfc506e1ebec049c540712d.jpg">
+    <img class="image" data-index="0" data-status="inactive" src="./images/2f1aadffae11058e8eae5ba5a29c934f.jpg">
+    <img class="image" data-index="1" data-status="inactive" src="./images/3e7c811ab98b0cba003ca62ddce784f9.jpg">
+    <img class="image" data-index="2" data-status="inactive" src="./images/e3a7de311e76eee3210aa99bceeb1357.jpg">
+    <img class="image" data-index="3" data-status="inactive" src="./images/e53e7d883aea3c3e696104cc30be6541.jpg">
+    <img class="image" data-index="4" data-status="inactive" src="./images/fe758e587bfc506e1ebec049c540712d.jpg">
+    <img class="image" data-index="5" data-status="inactive" src="./images/2f1aadffae11058e8eae5ba5a29c934f.jpg">
+    <img class="image" data-index="6" data-status="inactive" src="./images/3e7c811ab98b0cba003ca62ddce784f9.jpg">
+    <img class="image" data-index="7" data-status="inactive" src="./images/e3a7de311e76eee3210aa99bceeb1357.jpg">
+    <img class="image" data-index="8" data-status="inactive" src="./images/e53e7d883aea3c3e696104cc30be6541.jpg">
+    <img class="image" data-index="9" data-status="inactive" src="./images/fe758e587bfc506e1ebec049c540712d.jpg">
 
 
     <script src="script.js"></script>
